# b2p

./: Cargo.toml  Dockerfile  README.md  b2p-v2-spec.md  todo.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-22-b2p-v2-p0.md  2026-07-22-b2p-v2-p1a.md  2026-07-22-b2p-v2-p1b.md  2026-07-22-b2p-v2-p1c.md  2026-07-22-b2p-v2-p1d.md  2026-07-22-b2p-v2-p1e.md  2026-07-22-b2p.md  2026-07-23-b2p-relay-serve.md  2026-07-23-b2p-v2-p2a-turn.md  2026-07-23-b2p-v2-p2b-relay.md
docs/superpowers/specs/: 2026-07-22-b2p-design.md  2026-07-22-b2p-v2-p1-design.md  2026-07-22-ci-release-design.md  2026-07-23-b2p-relay-serve-design.md  2026-07-23-b2p-v2-p2a-turn-design.md  2026-07-23-b2p-v2-p2b-relay-design.md
relay-worker/: test.mjs  wrangler.toml
relay-worker/src/: index.js
scripts/: install.sh  pin-cloudflared.sh  smoke-tunnel.sh
src/: archive.rs  cloudflared_pins.rs  code.rs  config.rs  crypto.rs  doctor.rs  doh.rs  handshake.rs  http.rs  lib.rs  main.rs  pake.rs  progress.rs  protocol.rs  relay_server.rs  rvcode.rs  send.rs  server.rs  session.rs  store.rs  stream.rs  stun.rs  tlsprobe.rs  tunnel.rs  turn.rs  words.rs
src/rendezvous/: mod.rs  ntfy.rs
src/transport/: mock.rs  mod.rs  relay.rs  webrtc.rs
tests/: e2e.rs  relay_live.rs
