[package]
name = "b2p"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
bs58 = "0.5"
bytes = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
constant_time_eq = "0.4"
directories = "6"
flate2 = "1"
futures = "0.3"
indicatif = "0.17"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
spake2 = "0.4"
webrtc = "0.17"
x509-parser = "0.17"

[dev-dependencies]
rcgen = "0.13"
